--- a/Session-03/Session-03/Views/Shared/_Layout.cshtml
+++ b/Session-03/Session-03/Views/Shared/_Layout.cshtml
@@ -8,16 +8,15 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    @using (Html.BeginForm("Index", "Items", FormMethod.Post))
-    {
-        <div class="py-3 px-lg-5 d-flex justify-content-between align-items-center">
-
-            <div class="border border-3 py-2 px-lg-5">LOGO</div>
-            <input name="area" value="@ViewBag.Area" class="w-100" />
+    <div class="container body-content">
+        <div class="d-flex justify-content-between align-items-center my-3">
+            <div class="border border-3 border-dark py-3 px-5">LOGO</div>
+            @using (Html.BeginForm("Index", "Home", FormMethod.Post))
+            {
+                <input name="area" />
+            }
             <p>Welcome John Doe</p>
         </div>
-    }
-    <div class="px-lg-5">
         @RenderBody()
     </div>
 
