--- a/Session-03/Session-03/Views/Home/Detail.cshtml
+++ b/Session-03/Session-03/Views/Home/Detail.cshtml
@@ -1,27 +1,26 @@
 ﻿@model Session_03.Models.Item
-
 @{
     ViewBag.Title = "- Property Detail for " + Model.Title;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h4>Detail of "@Model.Title"</h4>
+<h4>Detail of @Model.Title at @Model.Area.Name</h4>
 <div>
     <div class="d-flex flex-wrap">
-        @foreach(Session_03.Models.ItemPicture ip in Model.ItemPictures)
+        @foreach (Session_03.Models.ItemPicture ip in Model.ItemPictures)
         {
             <div style="width:30%" class="m-3">
-                <img class="w-100" src="@Url.Content("~/itemPictures/"+ ip.PictureFileName)" />
+                <img class="w-100" src="@Url.Content("~/itemPictures/"+ip.PictureFileName)" />
             </div>
         }
     </div>
     <div class="d-flex justify-content-between align-items-center">
         <div style="width:40%">
             <div>
-                <span class="me-5">Capacity: @Model.Capacity</span>
-                <span class="me-5">Bedrooms: @Model.NumberOfBedrooms</span>
-                <span class="me-5">Beds: @Model.NumberOfBeds</span>
-                <span>Bathrooms: @Model.NumberOfBathrooms</span>
+                <span class="me-3">Capacity: @Model.Capacity</span>
+                <span class="me-3">Beds: @Model.NumberOfBeds</span>
+                <span class="me-3">Bedrooms: @Model.NumberOfBedrooms</span>
+                <span class="me-3">Bathrooms: @Model.NumberOfBathrooms</span>
             </div>
             <div>
                 <b>Description</b>
@@ -35,10 +34,10 @@
             </div>
         </div>
         <div>
-            Available Amenities:
-            @foreach(Session_03.Models.ItemAmenity iam in Model.ItemAmenities)
+            Available Amenities
+            @foreach (Session_03.Models.ItemAmenity iam in Model.ItemAmenities)
             {
-                <p>@iam.Amenity.Name</p>
+                <div>@iam.Amenity.Name</div>
             }
         </div>
         <div>
@@ -46,10 +45,11 @@
             <p>Check-out at: 26/11/2022</p>
             @using (Html.BeginForm("Payment", "Home", FormMethod.Post))
             {
-                <input name = "id" value = "@Model.ID" hidden />
+
+                <input name="id" value="@Model.ID" hidden />
                 <input name="price" value="@ViewBag.Price" hidden />
-                <p>Reserve for <input name="capacity" type="number" value="1" min="1" /> people</p>
-                <p>Amount Payable: @ViewBag.Price USD</p>
+                <p>Reserve for <input name="capacity" value="1" type="number" min="1" /> people</p>
+                <p>Amount Payable: @ViewBag.Price</p>
                 <button>Reserve Now</button>
             }
         </div>
